--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: mahasiswa_db
+      POSTGRES_DB: sandbox_lms
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
